Calendar/force-app/main/default/objects/CalendarEvent__c/CalendarEvent__c.object-meta.xml
<CustomObject>
    <label>CalendarEvent</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendarEvent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>