Calendar/force-app/main/default/objects/CalendarEvent__c/fields/End_Date_IST__c.field-meta.xml
<CustomField>
    <fullName>End_Date_IST__c</fullName>
    <label>End Date IST</label>
    <type>DateTime</type>
</CustomField>