Calendar/force-app/main/default/objects/CalendarEvent__c/fields/End_Date_NZ__c.field-meta.xml
<CustomField>
    <fullName>End_Date_NZ__c</fullName>
    <label>End Date NZ</label>
    <type>DateTime</type>
</CustomField>