Calendar/force-app/main/default/objects/CalendarEvent__c/fields/Start_Date_IST__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_IST__c</fullName>
    <label>Start Date IST</label>
    <type>DateTime</type>
</CustomField>