Calendar/force-app/main/default/objects/CalendarEvent__c/fields/Start_Date_NZ__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_NZ__c</fullName>
    <label>Start Date NZ</label>
    <type>DateTime</type>
</CustomField>